--- a/src/classes/BookTriggerHandler.cls
+++ b/src/classes/BookTriggerHandler.cls
@@ -3,5 +3,9 @@ public class BookTriggerHandler {
         for (MBMS_Book__c book : books) {
             book.Name = book.MBMS_Title__c;
         }
+        
+        for (MBMS_Book__c book : books) {
+            book.MBMS_Status_Comment__c = MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT;
+        }
     }
 }
