--- a/src/classes/BookTriggerHandlerTest.cls
+++ b/src/classes/BookTriggerHandlerTest.cls
@@ -17,4 +17,15 @@ private class BookTriggerHandlerTest {
         
         System.assertEquals(book.MBMS_Title__c, book.Name);
     }
+    
+    @isTest
+    static void triggerShouldUpdateBookStatusComment() {
+        Test.startTest();
+        MBMS_Book__c book = [SELECT MBMS_Status_Comment__c
+                             FROM MBMS_Book__c
+                             LIMIT 1];
+        Test.stopTest();
+        
+        System.assertEquals(MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT, book.MBMS_Status_Comment__c);
+    }
 }
