Add a new producer field to the movie object

--- a/src/classes/MovieBuilder.cls
+++ b/src/classes/MovieBuilder.cls
@@ -41,6 +41,11 @@ public class MovieBuilder {
         return this;
     }
     
+    public MovieBuilder withProducer(MBMS_Artist__c producer) {
+        this.movie.MBMS_Producer__c = producer.Id;
+        return this;
+    }
+    
     /*
      Should not be used in the loops due to SOQL limit - it inserts related fields.
      This method is used to create a single record (with all fields) for test purposes.
@@ -58,6 +63,7 @@ public class MovieBuilder {
             .withWriter(artist)
             .withStatus(MBMS_Constants.MBMS_STATUS_APPROVED)
             .withStatusComment(MBMS_Constants.MBMS_TEST_STRING_VALUE)
+            .withProducer(artist)
             .build();
     }
     
