Move the triggers logic from the handlers to the utility classes

--- a/src/classes/ArtistTriggerHandler.cls
+++ b/src/classes/ArtistTriggerHandler.cls
@@ -1,18 +1,10 @@
 public class ArtistTriggerHandler {
     public void onBeforeInsert(List<MBMS_Artist__c> artists) {
-        for (MBMS_Artist__c artist : artists) {
-            artist.Name = String.format('{0} {1}', new List<String> { artist.MBMS_First_Name__c, artist.MBMS_Last_Name__c });
-        }
-        
-        for (MBMS_Artist__c artist : artists) {
-            artist.MBMS_Status_Comment__c = MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT;
-        }
+        ArtistTriggerUtility.updateArtistNames(artists);
+        ArtistTriggerUtility.updateArtistStatusComments(artists);
     }
     
     public void onBeforeDelete(List<MBMS_Artist__c> artists) {
-        Set<Id> artistIds = (new Map<Id, MBMS_Artist__c>(artists)).keySet();
-        List<MBMS_Movie_Actor__c> movieActors = [SELECT Id FROM MBMS_Movie_Actor__c WHERE MBMS_Artist__r.Id IN :artistIds];
-        
-        delete movieActors;
+        ArtistTriggerUtility.removeRelatedMovieActors(artists);
     }
 }
