--- a/src/classes/MoviePhotoTriggerHandler.cls
+++ b/src/classes/MoviePhotoTriggerHandler.cls
@@ -1,7 +1,5 @@
 public class MoviePhotoTriggerHandler {
     public void onBeforeInsert(List<MBMS_Movie_Photo__c> moviePhotos) {
-        for (MBMS_Movie_Photo__c moviePhoto : moviePhotos) {
-            moviePhoto.MBMS_Status_Comment__c = MBMS_Constants.MBMS_INITIAL_STATUS_COMMENT;
-        }
+        MoviePhotoTriggerUtility.updateMoviePhotoStatusComments(moviePhotos);
     }
 }
