--- a/src/classes/MovieNewsController.cls
+++ b/src/classes/MovieNewsController.cls
@@ -6,4 +6,13 @@ public with sharing class MovieNewsController {
                 ORDER BY CreatedDate DESC
                 LIMIT 1];
     }
+    
+    @AuraEnabled(cacheable=true)
+    public static MBMS_Movie_News__c getLatestMovieNewsByMovieId(String movieId) {
+        return [SELECT MBMS_Title__c, MBMS_Content__c, MBMS_Tags__c, MBMS_Image_URL__c, CreatedDate, MBMS_Movie__r.Name
+                FROM MBMS_Movie_News__c
+                WHERE MBMS_Movie__c = :movieId
+                ORDER BY CreatedDate DESC
+                LIMIT 1];
+    }
 }
