Add some more constant pattern variables

--- a/src/classes/MBMS_Constants.cls
+++ b/src/classes/MBMS_Constants.cls
@@ -5,9 +5,21 @@ public class MBMS_Constants {
     public final static String MBMS_SEMICOLON = ';';
     public final static String FIELD_SHOULD_BE_PATTERN = '{0} field should be: {1}.';
     public final static String FIELD_SHOULD_CONTAIN_PATTERN = '{0} field should contain {1} value.';
+    public final static String OBJECT_SHOULD_NOT_BE_NULL_PATTERN = '{0} object should not be null.';
     public final static String FIELD_SHOULD_NOT_BE_NULL_PATTERN = '{0} field should not be null.';
-    public final static String SIZE_SHOULD_BE_GREATER_THAN_0_PATTERN = '{0} collection size should be greater than 0.';
-    public final static String SIZE_SHOULD_BE_EQUAL_TO_0_PATTERN = '{0} collection size should be equal to 0.';
+    public final static String VALUE_SHOULD_NOT_BE_NULL_PATTERN = '{0} value should not be null.';
+    public final static String SIZE_SHOULD_BE_GREATER_THAN_PATTERN = '{0} collection size should be greater than {1}.';
+    public final static String SIZE_SHOULD_BE_EQUAL_TO_PATTERN = '{0} collection size should be equal to {1}.';
+    public final static String VALUE_SHOULD_BE_EQUAL_TO_PATTERN = '{0} value should be equal to {1}.';
+    public final static String VALUE_SHOULD_BE_GREATER_THAN_PATTERN = '{0} value should be greater than {1}.';
+    public final static String VALUE_SHOULD_BE_GREATER_OR_EQUAL_TO_PATTERN = '{0} value should be greater or equal to {1}.';
+    public final static String VALUE_SHOULD_BE_LESS_OR_EQUAL_TO_PATTERN = '{0} value should be less or equal to {1}.';
+    public final static String VALUE_SHOULD_BE_LESS_THAN_PATTERN = '{0} value should be less than {1}.';
+    public final static String VALUE_SHOULD_BE_TRUE = '{0} value should be true.';
+    public final static String VALUE_SHOULD_BE_FALSE = '{0} value should be false.';
+    public final static String NO_ROWS_FOR_ASSIGMENT = 'List has no rows for assignment to SObject';
+    public final static String ELEMENT_OF_COLLECTION_SHOULD_NOT_BE_NULL = 'The element of the collection should not be null.';
+    public final static String NAME_OF_SOBJECT_SHOULD_BE = 'The name of {0} sObject should be {1}.';
     public final static Date MBMS_TEST_DATE_200_DAYS_BEFORE_TODAY =  Date.today().addDays(-200);
     public final static Date MBMS_TEST_DATE_10_DAYS_BEFORE_TODAY =  Date.today().addDays(-10);
     public final static Date MBMS_TEST_DATE_TODAY = Date.today();
